5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1859_1292.log
== TEST (2019-06-26 14:09:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:10:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- EXECUTION TIME:
1.17672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1292/main.py", line 6, in <module>
    print("ametista:", round[0], 1 )
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", (round[0], 1 ))
print("esmeralda", (round[1], 1))
print("safira", (round[2], 2))
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:11:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda", round[1], 1)
print("safira", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- EXECUTION TIME:
1.07436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1292/main.py", line 6, in <module>
    print("ametista:", round[0], 1 )
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda:", round[1], 1)
print("safira:", round[2], 2)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda:", round[1], 1)
print("safira:", round[2], 1)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:14:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round[0], 1 )
print("esmeralda:", round[1], 1)
print("safira:", round[2], 1)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:17:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- EXECUTION TIME:
0.562762
-- ERROR:
  File "/home/codebench/codes/1859/1292/main.py", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round([0], 0 )
print("esmeralda:", round([1], 0)
print("safira:", round([2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round([1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:19:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:19:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:19:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:20:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0 )
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:21:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:21:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
print("ametista:", round(v, 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 8
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:23:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:23:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:23:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:23:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- EXECUTION TIME:
0.530434
-- ERROR:
  File "/home/codebench/codes/1859/1292/main.py", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:23:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
z = n[1]
p = n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 10
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
print("ametista:", round(v, 0)
print("esmeralda:", round(z, 0)
print("safira:", round(p, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 8
    print("esmeralda:", round(z, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0], n[1], n[2]
print("ametista:", round(v, 0)
print("esmeralda:", round(v, 0)
print("safira:", round(v, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 8
    print("esmeralda:", round(v, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[1]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[1]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[1]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[1]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[0]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[0]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[0]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
v = n[0]
p = n[1]
print("ametista:", round(v, 0)
print("esmeralda:", round(p, 0)
print("safira:", round(, 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 9
    print("esmeralda:", round(p, 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:28:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:28:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print('ametista:', round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0)
print("esmeralda:", round(n[1], 0)
print("safira:", round(n[2], 0)
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
File "XXXX", line 7
    print("esmeralda:", round(n[1], 0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:30:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0))
print("esmeralda:", round(n[1], 0))
print("safira:", round(n[2], 0))
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:30:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("M:")))
y = array([[8,3,1], [5,12,10], [1,3,2]])
n = dot(inv(y), x.T)
print("ametista:", round(n[0], 0))
print("esmeralda:", round(n[1], 0))
print("safira:", round(n[2], 0))
if n[0] == max(n):
	print("ametista")
elif n[1] == max(n):
	print("esmeralda")
else:
	print("safira")

-- EXECUTION TIME:
1.02835
-- TEST CASE 1:
---- input:
 [10107,15720,3339]
---- correct output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
---- user output:
ametista: 1060.0
esmeralda: 325.0
safira: 652.0
ametista
-- TEST CASE 2:
---- input:
[5703,23325,5301]
---- correct output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
---- user output:
ametista: 195.0
esmeralda: 1060.0
safira: 963.0
esmeralda
-- TEST CASE 3:
---- input:
[4797,18873,4167]
---- correct output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
---- user output:
ametista: 231.0
esmeralda: 654.0
safira: 987.0
safira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
